<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/storageFragment"
        android:enabled="true"
        android:icon="@drawable/ic_storage"
        android:title="@string/bottom_navigation_menu_storage"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_navigation_menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/barFragment"
        android:enabled="true"
        android:icon="@drawable/ic_bar"
        android:title="@string/bottom_navigation_menu_bar"
        app:showAsAction="ifRoom" />

</menu>