<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardCocktail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/card_spacing"
    android:layout_marginTop="@dimen/ingredient_spacing"
    android:layout_marginEnd="@dimen/ingredient_spacing"
    app:cardBackgroundColor="@color/colorAccentDark"
    app:cardCornerRadius="@dimen/card_corner"
    app:contentPadding="@dimen/card_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cocktailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_cocktail_name"
            android:fontFamily="sans-serif"
            android:text="@string/placeholder_cocktail_name"
            android:textColorLink="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cocktailImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cocktailImageView"
            android:layout_width="@dimen/cocktail_icon_size"
            android:layout_height="@dimen/cocktail_icon_size"
            android:contentDescription="@string/description_cocktail_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_bar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>